# Cassandra

./: .commitlintrc.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-please-config.json  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-bake.hcl  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.memory.yml  post-create.sh
.devcontainer/memory-stack/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  copilot-subscription-test-report.md  feature_request.md
.github/act/: pr-governance-invalid.json  pr-governance-valid.json
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  devcontainers.yml  docker.yml  (+12 more)
ARCHITECTURE/: index.html
LATENCY_BENCHMARKS/: index.html
LIMITATIONS/: index.html
REALIGNMENT/: 00-overview.md  01-bug-list.md  02-architecture.md  03-phase-A-lockdown.md  04-phase-B-live-zone.md  05-phase-C-rust-proxy.md  06-phase-D-bedrock-vertex.md  07-phase-E-cache-stabilization.md  08-phase-F-auth-mode.md  09-phase-G-rtk-observability.md  10-phase-H-python-retirement.md  11-phase-I-test-infra.md  12-decisions-needed.md  INDEX.md
agent-evals/: README.md  pyproject.toml
agno/: index.html
api/: index.html
benchmarks/: __init__.py  adversarial_ccr_tests.py  agent_cost_benchmark.py  bench_latency.py  bench_relevance.py  bench_transforms.py  cache_bust_trace_report.py  cache_validation_bundle.py  cassandra_adversarial_benchmark.py  cassandra_worst_case_benchmark.py  ccr_regression_benchmark.py  claude_session_branch_compare.py  claude_session_mode_benchmark.py  comprehensive_eval.py  compression_benchmark.py  conftest.py  dynamic_detector_benchmark.py  index.html  prefix_cache_benchmark.py  proxy_mode_benchmark.py  real_world_agent_benchmark.py  rtk_loop_learn_eval.py  run_benchmarks.py  text_crusher_quality_eval.py
cassandra/: __init__.py  _ort.py  _version.py  agent_savings.py  binaries.py  cli.py  client.py  compress.py  config.py  copilot_auth.py  copilot_linux_secret.py  copilot_macos_keychain.py  exceptions.py  hooks.py  offline.py  onnx_runtime.py  parser.py  paths.py  pipeline.py  release_version.py  savings_ledger.py  shared_context.py  tokenizer.py  tools.json  update_check.py  utils.py
ccr/: index.html
cli/: index.html
compression/: index.html
configuration/: index.html
docker/: docker-compose.native.yml
docker-install/: index.html
docs/: observability.md  package-lock.json  package.json  rtk-architecture.md
e2e/: __init__.py  docker-native-install.sh
errors/: index.html
examples/: README.md  context_compression_demo.py  strands_bedrock_demo.py  strands_bundle_demo.py  strands_mcp_dispatch_test.py  strands_via_proxy_demo.py  tabular_compression_demo.py  test_ccr.py
filesystem-contract/: index.html
getting-started/: index.html
image-compression/: index.html
integration-guide/: index.html
langchain/: index.html
learn/: index.html
macos-deployment/: index.html
mcp/: index.html
memory/: index.html
metrics/: index.html
network-diff-capture/: index.html
persistent-installs/: index.html
plugins/cassandra-oauth2/: CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml
plugins/cassandra-oauth2/src/cassandra_oauth2/: __init__.py  middleware.py  provider.py
plugins/cassandra-oauth2/tests/: test_oauth2.py
proxy/: index.html
quickstart/: index.html
sbom/: cassandra-python-licenses.csv  cassandra-sbom-prod.cdx.json  cassandra-sbom-table.txt  cassandra-sbom.cdx.json
scripts/: README.md  audit_wheel_glibc_symbols.py  build_rust_extension.sh  eval_output_shaper.py  export_kompress_v2_onnx.py  install-git-hooks.sh  install.ps1  install.sh  pr-governance.py  refresh_model_limits.sh  replay_codex_ws_load.py  repro_codex_replay.py  smoke_issue_327.py  sync-plugin-versions.py  validate-workflows.sh  verify-versions.py  version-sync.py
sdk/: index.html
search/: search_index.json
shared-context/: index.html
sql/: create_dashboard_summary.sql  create_proxy_telemetry_v2.sql  upgrade_dashboard_v2.sql  upgrade_telemetry_stack_context.sql
strands/: index.html
stylesheets/: extra.css
tests/: __init__.py  conftest.py  e2e_cortex_savings.py  e2e_real_compression.py  e2e_ws_codex_usage_headers.py  e2e_ws_responses_compression.py  test_acceptance.py  test_adapter_hooks.py  test_adaptive_sizer.py  test_adversarial_grid.py  test_agent_savings.py  test_anthropic_beta_session_sticky.py  test_anthropic_pre_upstream_backpressure.py  test_anthropic_stage_timings.py  test_audit_codex.py  test_audit_reads.py  test_auth_mode.py  test_azure_foundry_claude_compression.py  test_backend_anyllm.py  test_backend_bugs.py  test_backend_streaming_cache_metrics.py  test_banner_upstream_targets.py  test_bedrock_region.py  test_bedrock_streaming_input_tokens.py  test_binaries.py  test_bundled_tools_savings.py  test_cache_aligner_detector_only.py  test_canonical_pipeline.py  test_ccr.py  test_ccr_batch_processor.py  test_ccr_batch_store.py  test_ccr_context_tracker.py  test_ccr_feedback.py  test_ccr_mcp_server.py  test_ccr_response_handler.py  test_ccr_response_handler_extra.py  test_ccr_row_drop_store_bridge.py  test_ccr_rust_marker_hash_bridge.py  test_ccr_sqlite_backend.py  test_ccr_tool_always_on.py  (+277 more)
text-compression/: index.html
transforms/: index.html
troubleshooting/: index.html
typescript-sdk/: index.html
vertex/: index.html
wiki/: ARCHITECTURE.md  LATENCY_BENCHMARKS.md  LIMITATIONS.md  agno.md  api.md  benchmarks.md  ccr.md  cli.md  compression.md  configuration.md  docker-install.md  errors.md  filesystem-contract.md  getting-started.md  image-compression.md  index.md  integration-guide.md  langchain.md  learn.md  macos-deployment.md  mcp.md  memory.md  metrics.md  network-diff-capture.md  persistent-installs.md  proxy.md  quickstart.md  sdk.md  shared-context.md  strands.md  text-compression.md  transforms.md  troubleshooting.md  typescript-sdk.md  vertex.md
(+834 files in other folders)
