[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "cassandra-ai"
description = "The Context Optimization Layer for LLM Applications"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Cassandra Contributors" }]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "opentelemetry-api>=1.20",
]

[project.urls]
Homepage = "https://github.com/Sarthak-47/cassandra"
Repository = "https://github.com/Sarthak-47/cassandra"

[project.scripts]
cassandra = "cassandra.cli.main:main"

[project.optional-dependencies]
# Reverse proxy server + MCP tools.
proxy = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "litellm>=1.40",
    "httpx>=0.24",
    "mcp>=1.0",
]
# ML-backed compressors (Kompress token classification, semantic relevance).
ml = [
    "torch>=2.0",
    "transformers>=4.40",
    "sentence-transformers>=2.2",
    "onnxruntime>=1.17",
    "numpy>=1.24",
    "huggingface_hub>=0.20",
]
relevance = ["cassandra-ai[ml]"]
langchain = [
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
]
agno = ["agno>=1.0"]
strands = ["strands-agents>=0.1"]
evals = [
    "datasets>=2.18",
    "numpy>=1.24",
    "rich>=13.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff==0.15.17",
    "mypy==1.20.2",
]
all = [
    "cassandra-ai[proxy,ml,langchain,agno,strands,evals]",
]

[tool.maturin]
manifest-path = "crates/cassandra-py/Cargo.toml"
module-name = "cassandra._core"
python-source = "."
features = ["pyo3/extension-module"]
strip = true

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["agent-evals", "docs", "sdk"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["cassandra"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
files = ["cassandra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
