[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "cassandra-ai"
version = "0.2.0"
description = "The Context Optimization Layer for LLM Applications"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Cassandra Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1",
    "opentelemetry-api>=1.20",
    # PyPI binary wheel (ships the ast-grep CLI, no separate download step)
    # so cassandra/binaries.py's ast-grep interceptor always has it on PATH.
    "ast-grep-cli>=0.30",
]

[project.urls]
Homepage = "https://github.com/Sarthak-47/cassandra"
Repository = "https://github.com/Sarthak-47/cassandra"

[project.scripts]
cassandra = "cassandra.cli.main:main"

[project.optional-dependencies]
# Reverse proxy server + MCP tools.
proxy = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # GH #956: litellm's own metadata pins requires-python <3.14, so an
    # unmarked dependency makes `pip install cassandra-ai` unsatisfiable on
    # 3.14. litellm is only used for model registry/pricing/non-core
    # providers (lazily imported, ImportError-guarded elsewhere), so it's
    # safe to skip here and degrade gracefully.
    "litellm>=1.84.0; python_version < '3.14'",  # PYSEC-2026-388, CVE-2026-40217/47101/47102
    "httpx[http2]>=0.24",  # server.py defaults http2=True on the AsyncClient
    "mcp>=1.0",
    # Transitive deps pinned to patched floors (pip-audit, 2026-07-02):
    "aiohttp>=3.14.1",  # PYSEC-2026-237 and 10 related CVEs in <3.14.1
    "python-dotenv>=1.2.2",  # CVE-2026-28684
    # Vector-index backend for the local memory system (cassandra/memory/
    # factory.py `_create_vector_index`, VectorBackend.AUTO). Without one
    # of sqlite-vec/hnswlib installed, memory_backend="local" raises
    # ValueError during startup and /readyz stays 503 forever.
    "sqlite-vec>=0.1",
]
# ML-backed compressors (Kompress token classification, semantic relevance).
ml = [
    "torch>=2.0",
    "transformers>=4.40",
    "sentence-transformers>=2.2",
    "onnxruntime>=1.17",
    "numpy>=1.24",
    "huggingface_hub>=0.20",
]
relevance = ["cassandra-ai[ml]", "fastembed>=0.3"]
langchain = [
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "langchain-community>=0.2",
]
agno = ["agno>=1.0", "openai>=1.0", "tiktoken>=0.7"]
strands = ["strands-agents>=0.1"]
# Local memory-stack sidecars (.devcontainer/memory-stack): Qdrant vector
# store + Neo4j graph store via mem0, driving cassandra/memory/backends/
# direct_mem0.py and mem0.py's lazy `from mem0 import Memory` /
# `from qdrant_client import QdrantClient` / `from neo4j import GraphDatabase`.
memory-stack = ["mem0ai>=0.1", "qdrant-client>=1.9", "neo4j>=5.19"]
evals = [
    "datasets>=2.18",
    "numpy>=1.24",
    "rich>=13.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff==0.15.17",
    "mypy==1.20.2",
    "pre-commit>=3.7",
    # CI's `test` job installs only `[dev]` and runs the full tests/ suite
    # (ci.yml: `pip install "${WHEEL}[dev]" pytest-split`), which imports
    # well beyond the base package -- proxy server deps for handler tests,
    # plus numpy/openai/tiktoken/rich/opentelemetry-sdk used pervasively
    # across individual test modules regardless of which extra "owns" the
    # feature under test.
    "cassandra-ai[proxy]",
    "numpy>=1.24",
    "openai>=1.0",
    "tiktoken>=0.7",
    "rich>=13.0",
    "opentelemetry-sdk>=1.20",
    "anyio>=4.0",
    # LocalBackendConfig's default embedder_backend is "local" (sentence-
    # transformers), and many tests construct it directly (bypassing
    # MemoryHandler's ONNX-first auto-detect). ci.yml already has a
    # dedicated prefetch-model job + HF cache warmed for exactly this
    # model (sentence-transformers/all-MiniLM-L6-v2, see
    # scripts/ci/verify_hf_model_cache.py) and installs CPU-only torch
    # ahead of the wheel — sentence-transformers itself was the missing
    # piece tying that infrastructure to an actual working embedder.
    "sentence-transformers>=2.2; python_version < '3.14'",
]
all = [
    "cassandra-ai[proxy,ml,langchain,agno,strands,evals]",
]

[tool.maturin]
manifest-path = "crates/cassandra-py/Cargo.toml"
module-name = "cassandra._core"
python-source = "."
features = ["pyo3/extension-module"]
strip = true
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "NOTICE", format = "sdist" },
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["agent-evals", "docs", "sdk"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["cassandra"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
files = ["cassandra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
